log
Thu, Mar 20, 2025  6:08:52 PM: 
./test.sh: line 26: gcc: command not found
Compilation failed
3f6cb15
Thu, Mar 20, 2025  6:09:16 PM: 
 exercises.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
./test.sh: line 26: gcc: command not found
Compilation failed
3e0d908
Thu, Mar 20, 2025  6:41:38 PM: 
 exercises.c | 32 +++++++++++++++++++++++++++++++-
 1 file changed, 31 insertions(+), 1 deletion(-)
./test.sh: line 26: gcc: command not found
Compilation failed
bc259f3
Thu, Mar 20, 2025  7:07:36 PM: 
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:49:7: error: implicit declaration of function 'push_back' [-Werror=implicit-function-declaration]
       push_back(L, elem);
       ^~~~~~~~~
exercises.c: In function 'parentesisBalanceados':
exercises.c:126:7: error: implicit declaration of function 'is_empty' [-Werror=implicit-function-declaration]
    if(is_empty(P)) {
       ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
613cb19
Thu, Mar 20, 2025  7:16:36 PM: 
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:49:7: error: implicit declaration of function 'push_back' [-Werror=implicit-function-declaration]
       push_back(L, elem);
       ^~~~~~~~~
exercises.c: In function 'parentesisBalanceados':
exercises.c:126:7: error: implicit declaration of function 'is_empty' [-Werror=implicit-function-declaration]
    if(is_empty(P)) {
       ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
9528da4
Thu, Mar 20, 2025  7:16:47 PM: 
 exercises.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
 tests:  7|1
total_score: 60/70
ab2e273
Sat, Mar 22, 2025  1:07:24 AM: 
 exercises.c | 22 +++++++++++++---------
 1 file changed, 13 insertions(+), 9 deletions(-)
 tests:  9|0
total_score: 70/70
b6a16df
